Add module-inf.java - https://github.com/zhong-j-yu/rekex/issues/7